--- a/_posts/2024-01-16-RFC-9490.markdown
+++ b/_posts/2024-01-16-RFC-9490.markdown
@@ -3,7 +3,7 @@ layout: post
 title: Report from the IAB Workshop on Management Techniques in Encrypted Networks (M-TEN) 
 date: 2024-01-16 
 description: This report summarizes the workshop's discussion and identifies topics that warrant future work and consideration.
-img: i-rest.jpg # Add image post (optional)
+img: temp.jpg # Add image post (optional)
 fig-caption: # Add figcaption (optional)
 tags: [workshop, encryption]
 ---
